--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ sourceCompatibility = '1.7.0'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
     compile 'com.squareup.okhttp:okhttp-ws:2.7.2'
+    compile "com.google.code.gson:gson:2.6.2"
     testCompile 'org.codehaus.groovy:groovy-all:2.3.10'
     testCompile "org.spockframework:spock-core:1.0-groovy-2.3"
 
