--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'groovy'
-if(project.hasProperty('signing.keyId'))
+if (project.hasProperty('signing.keyId')) {
     apply plugin: 'signing'
+}
 
 group = 'org.phoenixframework.channels'
 version = '0.1.0-SNAPSHOT'
@@ -31,7 +32,7 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
 }
 
-task runGroovyTest (dependsOn: 'classes', type: JavaExec) {
+task runGroovyTest(dependsOn: 'classes', type: JavaExec) {
     main = 'SimpleCliTest'
     classpath = sourceSets.main.runtimeClasspath
     systemProperty 'java.util.logging.config.file', 'src/main/resources/logging.properties'
@@ -46,48 +47,50 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
-if(project.hasProperty('signing.keyId'))
-signing {
-    sign configurations.archives
+if (project.hasProperty('signing.keyId')) {
+    signing {
+        sign configurations.archives
+    }
 }
 
-if(project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword'))
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+if (project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword')) {
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
+                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                }
 
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
+                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                }
 
-            pom.project {
-                name 'Java Library for Phoenix Channel Clients'
-                packaging 'jar'
-                description 'Java Library for Phoenix Channel Clients'
-                url 'https://github.com/eoinsha/JavaPhoenixChannels'
-
-                scm {
-                    connection 'scm:git:git://github.com/eoinsha/JavaPhoenixChannels.git'
-                    developerConnection 'scm:git:git@github.com:eoinsha/JavaPhoenixChannels.git'
+                pom.project {
+                    name 'Java Library for Phoenix Channel Clients'
+                    packaging 'jar'
+                    description 'Java Library for Phoenix Channel Clients'
                     url 'https://github.com/eoinsha/JavaPhoenixChannels'
-                }
 
-                licenses {
-                    license {
-                        name 'Modified BSD License'
-                        url 'http://directory.fsf.org/wiki/License:BSD_3Clause'
+                    scm {
+                        connection 'scm:git:git://github.com/eoinsha/JavaPhoenixChannels.git'
+                        developerConnection 'scm:git:git@github.com:eoinsha/JavaPhoenixChannels.git'
+                        url 'https://github.com/eoinsha/JavaPhoenixChannels'
                     }
-                }
 
-                developers {
-                    developer {
-                        id 'eoinsha'
-                        name 'Eoin Shanaghy'
+                    licenses {
+                        license {
+                            name 'Modified BSD License'
+                            url 'http://directory.fsf.org/wiki/License:BSD_3Clause'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'eoinsha'
+                            name 'Eoin Shanaghy'
+                        }
                     }
                 }
             }
