--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ sourceCompatibility = '1.7.0'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.squareup.okhttp:okhttp-ws:2.7.2'
+    compile 'com.squareup.okhttp3:okhttp-ws:3.2.0'
     compile "com.google.code.gson:gson:2.6.2"
 }
 
